# Orchestra

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  __init__.py  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/orchestra/: __init__.py  api.py  audit.py  auth.py  dag.py  db.py  models.py  replay.py  retry.py  scheduler.py  worker.py  ws.py
backend/orchestra/tasks/: base.py  demo_tasks.py  registry.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/ConductorPanel/: ConductorPanel.jsx
frontend/src/components/HeatmapView/: HeatmapView.jsx
frontend/src/components/ReplayDebugger/: ReplayDebugger.jsx
frontend/src/components/RunList/: RunList.jsx
frontend/src/components/ScoreView/: BatonLine.jsx  NoteNode.jsx  ScoreView.jsx  SlurEdge.jsx
frontend/src/components/TaskDetail/: TaskDetail.jsx
frontend/src/hooks/: useApi.js  useRunStream.js
