[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestra"
version = "0.1.0"
description = "A durable workflow orchestrator with a musical soul"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
]

[project.scripts]
orchestra-worker = "orchestra.worker:main"
orchestra-scheduler = "orchestra.scheduler:main"

[tool.hatch.build.targets.wheel]
packages = ["orchestra"]

[tool.alembic]
script_location = "alembic"
sqlalchemy.url = "postgresql+asyncpg://orchestra:orchestra@localhost:5432/orchestra"
